infra/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-teste-21
  namespace: projetos
spec:
  selector:
    app: app-teste-21
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
