infra/manifests/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: app-teste-21
  namespace: projetos
spec:
  hosts:
    - "*"
  gateways:
    - app-teste-21-gateway
  http:
    - match:
        - uri:
            prefix: /api/
      route:
        - destination:
            host: app-teste-21
            port:
              number: 80
